hphp/hack/test/typecheck/gen6.php.exp
File "gen6.php", line 26, characters 11-17:
Some type constraint(s) here are violated (Typing[4110])
File "gen6.php", line 13, characters 30-30:
'T' is a constrained type
File "gen6.php", line 12, characters 14-14:
This is an object of type A
File "gen6.php", line 26, characters 11-17:
It is incompatible with an object of type Z
